<resources>
    <string name="app_name">AEON_TEST</string>
    <string name="check_internet_con">Check Internet connection</string>

    <!--  Login screen  -->
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>

    <!--  Payment screen  -->
    <string name="payments_list">Список платежей: </string>

</resources>