<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".presentation.ui.fragment.LoginFragment">

    <LinearLayout
        android:id="@+id/ll_main"
        android:visibility="visible"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:textSize="32sp"
            android:paddingVertical="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_hint"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:cornerRadius="5dp"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:cornerRadius="5dp"
            android:padding="10dp" />

        <TextView
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/error_message"
            android:textSize="16sp"
            android:paddingVertical="30dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="140dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:progress="25" />
</FrameLayout>